[package]
name = "lob"
version = "0.1.0"
authors = ["Colin Stearns <cstearns@developers.wyyerd.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.1", features=["json"] }
serde = { version = "1.0.104", features=["derive"] }
serde_json = "1.0.44"
chrono = { version = "0.4.10", features=["serde"] }
serde_qs = "0.5.2"

[dev-dependencies]
dotenv = "0.15.0"
tokio-test = "0.2.0"
rand = "0.7.3"

