[package]
name = "lob"
version = "0.2.0"
authors = ["Colin Stearns <cstearns@developers.wyyerd.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features=["json", "multipart"] }
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features=["serde"] }
serde_qs = "0.5"

[dev-dependencies]
dotenv = "0.15.0"
tokio-test = { version = "0.4" }
rand = "0.7.3"

