[package]
name = "lob"
version = "0.2.1"
authors = ["Colin Stearns <cstearns@developers.wyyerd.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["json", "multipart"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
chrono = { version = "0.4.19", features = ["serde"] }
serde_qs = "0.9.1"

[dev-dependencies]
dotenv = "0.15.0"
tokio-test = "0.4.2"
rand = "0.8.5"

